[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

toml = "0.9.2"

anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21.3"
dashmap = "6.1.0"
rand = "0.9.2"
